# project_traveler

./: .gitignore  .gitmodules  CMakeLists.txt  notes.txt  required_definitions.txt
CMake/Modules/: FindOpenGLES2.cmake
data/: global.lua
data/battles/actions/: attack.lua  dead.lua  dodge.lua  hurt.lua  idle.lua  jump_forward.lua  kneeling.lua  magic_cast.lua  magic_prepare.lua  run_after_victory.lua  sword_attack.lua  victory.lua  weapon_attack.lua
data/battles/characters_animations/: bronann_punch.lua
data/boot_menu/ep1/: boot.lua
data/debug/subscripts/: map_sprite_test.lua  sprite_test.lua
data/entities/: characters.lua  map_sprites.lua
data/entities/map/characters/: default_idle.lua  default_walk.lua
data/inventory/: weapons.lua
data/new_assets/: borghen_hurt.lua  borghen_idle.lua  borghen_jump_forward.lua  borghen_kneeling.lua
data/shaders/: default_vertex.vs  default_vertex_webgl.vs  solid_fragment.fs  solid_fragment_webgl.fs  sprite_fragment.fs  sprite_fragment_webgl.fs
data/skills/: barehands.lua  weapon.lua
src/: CMakeLists.txt  main.cpp  original_source
src/common/: app_settings.cpp
src/common/global/actors/: global_actor.h  global_character.cpp
src/engine/: engine_bindings.cpp  system.cpp
src/engine/video/: image.cpp  image.h  video.cpp  video.h
src/engine/video/gl/: gl_render_target.cpp  gl_shader_definitions.cpp  gl_shader_definitions.h  gl_shader_program.cpp
src/luabind/src/: CMakeLists.txt  pcall.cpp
src/modes/battle/objects/: battle_character.cpp
src/modes/map/map_sprites/: map_sprite.cpp
src/utils/src/utils/: gl_include.h
test/: Build.sh  battle_test.cpp
webassembly_cmake_modules/: FindGLEW.cmake  FindOpenAL.cmake  FindOpenGLES2.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake  WebassemblyToolchain.cmake
webassembly_deps/lua/: CMakeLists.txt  makefile
webassembly_deps/nul/: CMakeLists.txt  dummy.cpp
