IF (DEFINED ENV{EMSDK})
    set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_SOURCE_DIR}/../../webassembly_cmake_modules/WebassemblyToolchain.cmake")
endif()

project (lua_emscripten)
cmake_minimum_required(VERSION 2.8)

#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s LLD_REPORT_UNDEFINED")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s LLD_REPORT_UNDEFINED")

add_definitions(-DLUA_COMPAT_5_2)

#FILE(GLOB LUA_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

FILE(GLOB LUA_SRC
${CMAKE_CURRENT_SOURCE_DIR}/lapi.c
${CMAKE_CURRENT_SOURCE_DIR}/lcode.c
${CMAKE_CURRENT_SOURCE_DIR}/lctype.c
${CMAKE_CURRENT_SOURCE_DIR}/ldebug.c
${CMAKE_CURRENT_SOURCE_DIR}/ldo.c
${CMAKE_CURRENT_SOURCE_DIR}/ldump.c
${CMAKE_CURRENT_SOURCE_DIR}/lfunc.c
${CMAKE_CURRENT_SOURCE_DIR}/lgc.c
${CMAKE_CURRENT_SOURCE_DIR}/llex.c
${CMAKE_CURRENT_SOURCE_DIR}/lmem.c
${CMAKE_CURRENT_SOURCE_DIR}/lobject.c
${CMAKE_CURRENT_SOURCE_DIR}/lopcodes.c
${CMAKE_CURRENT_SOURCE_DIR}/lparser.c
${CMAKE_CURRENT_SOURCE_DIR}/lstate.c
${CMAKE_CURRENT_SOURCE_DIR}/lstring.c
${CMAKE_CURRENT_SOURCE_DIR}/ltable.c
${CMAKE_CURRENT_SOURCE_DIR}/ltests.c
${CMAKE_CURRENT_SOURCE_DIR}/ltm.c
${CMAKE_CURRENT_SOURCE_DIR}/lundump.c
${CMAKE_CURRENT_SOURCE_DIR}/lvm.c
${CMAKE_CURRENT_SOURCE_DIR}/lzio.c
${CMAKE_CURRENT_SOURCE_DIR}/lzio.c

${CMAKE_CURRENT_SOURCE_DIR}/lauxlib.c
${CMAKE_CURRENT_SOURCE_DIR}/lbaselib.c
${CMAKE_CURRENT_SOURCE_DIR}/lcorolib.c
${CMAKE_CURRENT_SOURCE_DIR}/ldblib.c
${CMAKE_CURRENT_SOURCE_DIR}/linit.c
${CMAKE_CURRENT_SOURCE_DIR}/liolib.c
${CMAKE_CURRENT_SOURCE_DIR}/lmathlib.c
${CMAKE_CURRENT_SOURCE_DIR}/loadlib.c
${CMAKE_CURRENT_SOURCE_DIR}/loslib.c
${CMAKE_CURRENT_SOURCE_DIR}/lstrlib.c
${CMAKE_CURRENT_SOURCE_DIR}/ltablib.c
${CMAKE_CURRENT_SOURCE_DIR}/lutf8lib.c
)


add_library(lua ${LUA_SRC})

